fix: align text

--- a/static/styles.css
+++ b/static/styles.css
@@ -94,6 +94,10 @@ div.main {
 	min-width: 300px;
 }
 
+div.main p {
+	text-align: center;
+}
+
 div.main,
 div.code {
 	padding-top: 30px;
